[package]
edition = "2021"
name = "napi2"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.0.0", features = ["full"]}
napi-derive = "2.0.0"
futures = "0.3"
tokio = {version = "1", features = ["default", "fs"]}
serde = "1"
serde_derive = "1"
serde_json = "1"

[build-dependencies]
napi-build = "1.2.0"
